<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TableLayout
        android:id="@+id/epidemicdata_tablelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:shrinkColumns="0"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground">

            <TextView
                android:id="@+id/epidemicdata_header1"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_region"
                android:textColor="@color/colorFont"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/epidemicdata_header2"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_confirmed"
                android:textColor="@color/colorFont"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/epidemicdata_header3"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_cured"
                android:textColor="@color/colorFont"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/epidemicdata_header4"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_dead"
                android:textColor="@color/colorFont"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_epidemicdata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>