<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".category.CategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="50dp"
        android:paddingBottom="30dp"
        android:id="@+id/arr_channel"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_text1"
            android:textSize="25sp"
            android:textColor="@color/catArrangeTitleColor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/category_text2"
            android:textColor="@color/catArrangeHintColor"
            android:textSize="15sp"
            />

    </LinearLayout>

    <com.java.zhengkw.category.DragGridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/arr_grid1"
        android:columnCount="4"
        app:layout_constraintTop_toBottomOf="@id/arr_channel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </com.java.zhengkw.category.DragGridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/arr_grid1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="100dp"
        android:paddingBottom="30dp"
        android:id="@+id/arr_del_channel"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_text3"
            android:textSize="25sp"
            android:textColor="@color/catArrangeTitleColor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/category_text4"
            android:textColor="@color/catArrangeHintColor"
            android:textSize="15sp"
            />


    </LinearLayout>

    <com.java.zhengkw.category.DragGridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/arr_grid2"
        android:columnCount="4"
        app:layout_constraintTop_toBottomOf="@+id/arr_del_channel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >
    </com.java.zhengkw.category.DragGridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>